--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,6 @@
-[project]
+[
+project
+]
 name = "ct_3d_reconstruction"
 version = "0.1.0"
 description = "A simple plugin for capturing CT image slices and 3D reconstruction"
@@ -6,109 +8,78 @@ readme = "README.md"
 license = { file = "LICENSE" }
 authors = [{ name = "s1alknau", email = "akknauss@gmail.com" }]
 requires-python = ">=3.9"
-
-dependencies = [
-    "numpy",
-    "scipy",
-    "tifffile",
-    "h5py",
-    "magicgui",
-    "qtpy",
-    "napari",
-    "scikit-image",
-]
-
+dependencies = ["numpy", "scipy", "tifffile", "h5py", "magicgui", "qtpy", "napari", "scikit-image"]
 classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
-    "Framework :: napari",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
-    "Topic :: Scientific/Engineering :: Image Processing",
+  "Development Status :: 2 - Pre-Alpha",
+  "Framework :: napari",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Topic :: Scientific/Engineering :: Image Processing",
 ]
 
-[project.optional-dependencies]
-testing = [
-    "tox",
-    "pytest",
-    "pytest-cov",
-    "pytest-qt",
-    "pyqt5",
+[
+project.optional-dependencies
 ]
+testing = ["tox", "pytest", "pytest-cov", "pytest-qt", "pyqt5"]
 
-[project.entry-points."napari.manifest"]
+[
+project.entry-points."napari.manifest"
+]
 ct-3d-reconstruction = "ct_3d_reconstruction:napari.yaml"
 
-[project.urls]
+[
+project.urls
+]
 "Bug Tracker" = "https://github.com/s1alknau/ct-3d-reconstruction/issues"
 "Documentation" = "https://github.com/s1alknau/ct-3d-reconstruction#README.md"
 "Source Code" = "https://github.com/s1alknau/ct-3d-reconstruction"
 "User Support" = "https://github.com/s1alknau/ct-3d-reconstruction/issues"
 
-[build-system]
+[
+build-system
+]
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
+[
+tool.setuptools
+]
 include-package-data = true
 
-[tool.setuptools.packages.find]
+[
+tool.setuptools.packages.find
+]
 where = ["src"]
 
-[tool.setuptools.package-data]
+[
+tool.setuptools.package-data
+]
 "*" = ["*.yaml"]
 
-[tool.black]
-line-length = 79
-target-version = ["py39", "py311", "py312", "py313"]
+[
+tool.black
+]
+line-length = 88
+target-version = ["py39"]
 
-[tool.ruff]
-line-length = 79
-target-version = "py39"
+[
+tool.ruff.lint
+]
+select = ["E", "F", "W", "C90", "UP", "I", "BLE", "B", "A", "C4", "ISC", "G", "PIE", "SIM"]
+ignore = ["E203", "E501", "UP006", "UP007", "SIM117"]
+
+[
+tool.ruff
+]
+line-length = 88
+target-version = ["py39"]
 fix = true
-select = [
-    "E", "F", "W",
-    "UP",
-    "I",
-    "BLE",
-    "B",
-    "A",
-    "C4",
-    "ISC",
-    "G",
-    "PIE",
-    "SIM",
-]
-ignore = [
-    "E501",
-    "UP006", "UP007",
-    "SIM117",
-]
-exclude = [
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git",
-    ".mypy_cache",
-    ".pants.d",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    "__pypackages__",
-    "_build",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "venv",
-    "*vendored*",
-    "*_vendor*",
-]
+exclude = [".bzr", ".direnv", ".eggs", ".git", ".mypy_cache", ".pants.d", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv", "*vendored*", "*_vendor*"]
